feat: notify api implementation